// Vitest Snapshot v1

exports[`<GameTile> Snapshots > matches current snapshot for can move 1`] = `
<div
  class="player1 hex tile tilecanmove"
  draggable="true"
  tabindex="0"
  title="Player-1 tileCanMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#tilecanmove"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > matches current snapshot for no moves 1`] = `
<div
  class="player0 hex tile tilenomove"
  draggable="false"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#tilenomove"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > matches current snapshot for when stacked 1`] = `
<div
  class="player0 hex stacked tile tilenomove"
  draggable="false"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#tilenomove"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > renders creature 1`] = `
<div
  class="player1 hex tile tilecanmove"
  draggable="true"
  tabindex="0"
  title="Player-1 tileCanMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#tilecanmove"
    />
  </svg>
</div>
`;

exports[`<GameTile> Snapshots > renders creature 2`] = `
<div
  class="player0 hex tile tilenomove"
  draggable="false"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      href="#tilenomove"
    />
  </svg>
</div>
`;
